--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.1",
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
+    "node-telegram-bot-api": "^0.24.0",
     "serve-favicon": "~2.3.0",
     "youtube-mp3-downloader": "^0.4.2",
     "youtube-node": "^1.3.0"
