--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -16,5 +17,8 @@
     "serve-favicon": "~2.3.0",
     "youtube-mp3-downloader": "^0.4.2",
     "youtube-node": "^1.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
   }
 }
